--- a/config/gologgen.conf
+++ b/config/gologgen.conf
@@ -6,7 +6,7 @@
   "DataFiles" : [
     {
       "Path": "config/gologgen.data"
-      }
+    }
   ],
   "ReplayFiles" : [
     {
@@ -14,6 +14,12 @@
       "TimestampRegex" : "^(?P<year>\\d+)-(?P<month>\\d+)-(?P<day>\\d+) (?P<hour>\\d+):(?P<minute>\\d+):(?P<second>\\d+)",
       "TimestampFormat" : "2006-01-02 15:04:05",
       "RepeatInterval": 30
+    },
+    {
+      "Path" : "config/Firewall.dat",
+      "TimestampRegex" : "(?P<year>\\d+)-(?P<month>\\d+)-(?P<day>\\d+)T(?P<hour>\\d+):(?P<minute>\\d+):(?P<second>\\d+)-\\d+:\\d+",
+      "TimestampFormat" : "2006-01-02T15:04:05",
+      "RepeatInterval": 3600
     }
   ]
  }
