A few demo changes to configs

--- a/config/gologgen.conf
+++ b/config/gologgen.conf
@@ -10,15 +10,21 @@
   ],
   "ReplayFiles" : [
     {
-      "Path" : "config/replay1.dat",
+      "Path" : "config/DatabaseErrorOneLine.dat",
       "TimestampRegex" : "^(?P<year>\\d+)-(?P<month>\\d+)-(?P<day>\\d+) (?P<hour>\\d+):(?P<minute>\\d+):(?P<second>\\d+)",
       "TimestampFormat" : "2006-01-02 15:04:05",
-      "RepeatInterval": 30
+      "RepeatInterval": 3600
     },
     {
       "Path" : "config/Firewall.dat",
       "TimestampRegex" : "(?P<year>\\d+)-(?P<month>\\d+)-(?P<day>\\d+)T(?P<hour>\\d+):(?P<minute>\\d+):(?P<second>\\d+)-\\d+:\\d+",
       "TimestampFormat" : "2006-01-02T15:04:05",
+      "RepeatInterval": 3600
+    },
+    {
+      "Path" : "config/IIS.dat",
+      "TimestampRegex" : "(?P<year>\\d+)-(?P<month>\\d+)-(?P<day>\\d+) (?P<hour>\\d+):(?P<minute>\\d+):(?P<second>\\d+)",
+      "TimestampFormat" : "2006-01-02 15:04:05",
       "RepeatInterval": 3600
     }
   ]
