Fix travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,5 @@ go:
 
 install:
   - go get gopkg.in/inconshreveable/log15.v2
+  - go get github.com/ftwynn/gologgen/loggensender
+  - go get github.com/ftwynn/gologgen/loggenmunger
