Add Header support for Replay Files

--- a/config/gologgen.conf
+++ b/config/gologgen.conf
@@ -14,19 +14,49 @@
       "Path" : "config/DatabaseErrorOneLine.dat",
       "TimestampRegex" : "^(?P<year>\\d+)-(?P<month>\\d+)-(?P<day>\\d+) (?P<hour>\\d+):(?P<minute>\\d+):(?P<second>\\d+)",
       "TimestampFormat" : "2006-01-02 15:04:05",
-      "RepeatInterval": 3600
+      "RepeatInterval": 3600,
+      "Headers" : [
+        {"Header" : "Content-type",
+          "Value" : "plain/text"},
+        {"Header" :"X-Sumo-Category",
+          "Value" : "OverwrittenCategory1"},
+        {"Header" :"X-Sumo-Name",
+          "Value" : "OverwrittenName1"},
+        {"Header" :"X-Sumo-Host",
+          "Value" : "OverwrittenHost1"}
+        ]
     },
     {
       "Path" : "config/Firewall.dat",
       "TimestampRegex" : "(?P<year>\\d+)-(?P<month>\\d+)-(?P<day>\\d+)T(?P<hour>\\d+):(?P<minute>\\d+):(?P<second>\\d+)-\\d+:\\d+",
       "TimestampFormat" : "2006-01-02T15:04:05",
-      "RepeatInterval": 3600
+      "RepeatInterval": 3600,
+      "Headers" : [
+        {"Header" : "Content-type",
+          "Value" : "plain/text"},
+        {"Header" :"X-Sumo-Category",
+          "Value" : "OverwrittenCategory2"},
+        {"Header" :"X-Sumo-Name",
+          "Value" : "OverwrittenName2"},
+        {"Header" :"X-Sumo-Host",
+          "Value" : "OverwrittenHost2"}
+        ]
     },
     {
       "Path" : "config/IIS.dat",
       "TimestampRegex" : "(?P<year>\\d+)-(?P<month>\\d+)-(?P<day>\\d+) (?P<hour>\\d+):(?P<minute>\\d+):(?P<second>\\d+)",
       "TimestampFormat" : "2006-01-02 15:04:05",
-      "RepeatInterval": 3600
+      "RepeatInterval": 3600,
+      "Headers" : [
+        {"Header" : "Content-type",
+          "Value" : "plain/text"},
+        {"Header" :"X-Sumo-Category",
+          "Value" : "OverwrittenCategory3"},
+        {"Header" :"X-Sumo-Name",
+          "Value" : "OverwrittenName3"},
+        {"Header" :"X-Sumo-Host",
+          "Value" : "OverwrittenHost3"}
+        ]
     }
   ]
  }
