Replace Logging Library
While I loved the format of log15, I found that I could very easily
sneak in runtime errors. So I switched back to logrus, while cleaning up
a few other things in the meantime.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ go:
   - tip
 
 install:
-  - go get gopkg.in/inconshreveable/log15.v2
+  - go get github.com/Sirupsen/logrus
   - go get github.com/ftwynn/gologgen/loggensender
   - go get github.com/ftwynn/gologgen/loggenmunger
