Add conf file and data file validation

--- a/config/conf_examples/simple2.conf
+++ b/config/conf_examples/simple2.conf
@@ -3,7 +3,7 @@
   "FileOutputPath" : "testoutput.dat",
   "DataFiles" : [
     {
-      "Path": "config/gologgen.data"
+      "Path": "config/datafile_examples/gologgen.data"
     }
   ]
 }
