--- a/config/conf_examples/simple3.conf
+++ b/config/conf_examples/simple3.conf
@@ -4,7 +4,7 @@
 "SyslogType": "tcp",
   "ReplayFiles" : [
     {
-      "Path" : "config/IIS.replay",
+      "Path" : "config/replayfile_examples/IIS.replay",
       "TimestampRegex" : "^(?P<year>\\d+)-(?P<month>\\d+)-(?P<day>\\d+) (?P<hour>\\d+):(?P<minute>\\d+):(?P<second>\\d+)",
       "TimestampFormat" : "2006-01-02 15:04:05",
       "RepeatInterval": 3600,
