Fixed double send issue

--- a/config/gologgen.conf
+++ b/config/gologgen.conf
@@ -5,5 +5,23 @@
     {
       "Path": "config/datafile_examples/gologgen.data"
     }
+  ],
+  "ReplayFiles" : [
+    {
+      "Path" : "config/replayfile_examples/IIS.replay",
+      "TimestampRegex" : "^(?P<year>\\d+)-(?P<month>\\d+)-(?P<day>\\d+) (?P<hour>\\d+):(?P<minute>\\d+):(?P<second>\\d+)",
+      "TimestampFormat" : "2006-01-02 15:04:05",
+      "RepeatInterval": 3600,
+      "Headers" : [
+        {"Header" : "Content-type",
+          "Value" : "plain/text"},
+        {"Header" :"X-Sumo-Category",
+          "Value" : "OverwrittenCategory1"},
+        {"Header" :"X-Sumo-Name",
+          "Value" : "OverwrittenName1"},
+        {"Header" :"X-Sumo-Host",
+          "Value" : "OverwrittenHost1"}
+        ]
+    }
   ]
  }
